--- a/public/index.html
+++ b/public/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="en">
   <head>
     <meta charset="utf-8" />
@@ -39,6 +39,11 @@
       To begin the development, run `npm start` or `yarn start`.
       To create a production bundle, use `npm run build` or `yarn build`.
     -->
-    <script async defer data-website-id="d74d1fdc-173c-4211-9d02-974020dea0be" src="https://fervent-ape.pikapod.net/script.js"></script>
+    <script
+      async
+      defer
+      data-website-id="d74d1fdc-173c-4211-9d02-974020dea0be"
+      src="https://fervent-ape.pikapod.net/script.js"
+    ></script>
   </body>
 </html>
