undo change to analytics id

--- a/public/index.html
+++ b/public/index.html
@@ -19,7 +19,7 @@
     <script
       async
       defer
-      data-website-id="test"
+      data-website-id="d74d1fdc-173c-4211-9d02-974020dea0be"
       src="https://fervent-ape.pikapod.net/script.js"
     ></script>
   </body>
