add env props for analytics

--- a/public/index.html
+++ b/public/index.html
@@ -19,8 +19,8 @@
     <script
       async
       defer
-      data-website-id="d74d1fdc-173c-4211-9d02-974020dea0be"
-      src="https://fervent-ape.pikapod.net/script.js"
+      data-website-id="%REACT_APP_ANALYTICS_ID%"
+      src="%REACT_APP_ANALYTICS_SRC%"
     ></script>
   </body>
 </html>
