fix: add js redirect code (!87)
- Add a snippet of JS code to redirect to the new domain
- Doing this because the standard `_redirects` file will not work because existing files take priority

https://gitlab.com/hectorjsmith/phasmophobia-guide/-/merge_requests/87

--- a/public/index.html
+++ b/public/index.html
@@ -22,5 +22,17 @@
       data-website-id="%REACT_APP_ANALYTICS_ID%"
       src="%REACT_APP_ANALYTICS_SRC%"
     ></script>
+    <script>
+      function _redirect() {
+        var x =
+          location.hostname.search(
+            'hectorjsmith.gitlab.io/phasmophobia-guide',
+          ) != -1
+            ? true
+            : false
+        if (x) location.href = 'https://phasmoguide.hjs.dev/'
+      }
+      _redirect()
+    </script>
   </body>
 </html>
