use href instead of hostname

--- a/public/index.html
+++ b/public/index.html
@@ -25,7 +25,7 @@
     <script>
       function _redirect() {
         var x =
-          location.hostname.search(
+          location.href.search(
             'hectorjsmith.gitlab.io/phasmophobia-guide',
           ) != -1
             ? true
