fix: use href instead of hostname in redirect script (!88)
- Fix redirect script to use correct variable

https://gitlab.com/hectorjsmith/phasmophobia-guide/-/merge_requests/88

--- a/public/index.html
+++ b/public/index.html
@@ -25,9 +25,8 @@
     <script>
       function _redirect() {
         var x =
-          location.hostname.search(
-            'hectorjsmith.gitlab.io/phasmophobia-guide',
-          ) != -1
+          location.href.search('hectorjsmith.gitlab.io/phasmophobia-guide') !=
+          -1
             ? true
             : false
         if (x) location.href = 'https://phasmoguide.hjs.dev/'
